# site-to-site-vpn

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
src/site_to_site_vpn/constructs/: constants.py  customer_gateway.py  ec2.py  vpn_connection.py  web_server.py
src/site_to_site_vpn/stacks/: datacenter.py  vpc.py
